@@ -8,12 +8,17 @@ else
   # explicit configured for log4j2
   export CATALINA_OPTS="$CATALINA_OPTS -Dlog4j.configurationFile=${LOG4J2}"
 fi
-# find out limit of current pod:
-limit=`cat /sys/fs/cgroup/memory/memory.limit_in_bytes`
-# Substract 1.5G some for non heap useage
-heapsize=$((limit - 1500000000))
 
-export CATALINA_OPTS="$CATALINA_OPTS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
+# find out limit of current pod:
+#limit=`cat /sys/fs/cgroup/memory/memory.limit_in_bytes`
+# Substract 1.5G some for non heap useage
+#heapsize=$((limit - 1500000000))
+
+if [[ -z "$MaxRAMPercentage" ]] ; then
+  MaxRAMPercentage=90.0
+fi
+
+export CATALINA_OPTS="$CATALINA_OPTS -XX:MaxRAMPercentage=${MaxRAMPercentage} -XshowSettings:vm"
 
 # system property kibana can used in log4j2.xml SystemPropertyArbiter to switch to logging more specific to kibana
 export CATALINA_OPTS="$CATALINA_OPTS -Dkibana=true"
@@ -35,10 +40,11 @@ JMX_PORT=$($dir/jmx.sh)
 export CATALINA_OPTS="$CATALINA_OPTS -Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.port=$JMX_PORT -Dcom.sun.management.jmxremote.rmi.port=$JMX_PORT -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.local.only=false -Djava.rmi.server.hostname=localhost"
 
 # gc logging
-export CATALINA_OPTS="$CATALINA_OPTS -verbose:gc -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=5M -Xloggc:${CATALINA_LOGS}/gc.log"
+export CATALINA_OPTS="$CATALINA_OPTS -Xlog:gc*=debug:${CATALINA_LOGS}/gc.log"
 
-#
+# crash logging
 export CATALINA_OPTS="$CATALINA_OPTS -XX:ErrorFile=${CATALINA_LOGS}/hs_err_pid%p.log"
+
 
 # JPDA debugger  is arranged in catalina.sh
 export JPDA_ADDRESS=8000
